apps/k8s-manifests/voiceresumeapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: voiceresumeapp-svc
  namespace: production
spec:
  type: ClusterIP
  selector:
    app: voiceresumeapp
  ports:
  - name: http
    port: 8000
    targetPort: 8000
    protocol: TCP
